// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityHistoryItem only renders the first line of multi-line notes 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      >
        Line 1
      </Text>
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with an image and hidden imageMode 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with an image and large imageMode 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      {
        "alignItems": "center",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "marginBottom": 15,
        "position": "relative",
        "width": "100%",
      }
    }
  />
  <Text
    numberOfLines={2}
    style={
      [
        {
          "color": undefined,
          "fontSize": 14,
          "marginBottom": 2,
        },
        {
          "marginBottom": 15,
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with an image and medium imageMode 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <Image
    source={
      {
        "uri": "data:image/jpeg;base64,mock",
      }
    }
    style={
      {
        "backgroundColor": "#eee",
        "borderRadius": 10,
        "height": 60,
        "marginRight": 15,
        "width": 60,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with an image and small imageMode 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <Image
    source={
      {
        "uri": "data:image/jpeg;base64,mock",
      }
    }
    style={
      {
        "backgroundColor": "#eee",
        "borderRadius": 8,
        "height": 40,
        "marginRight": 10,
        "width": 40,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with lastEntryEndDate prop (blue text) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <Text
    style={
      {
        "color": "#007AFF",
        "fontSize": 12,
        "fontWeight": "500",
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    5m since last time
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:05:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly with notes preview 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      >
        Test Note
      </Text>
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders correctly without notes 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ActivityHistoryItem renders duration when startDate and endDate differ 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 10,
        "padding": 15,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 5,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginRight": 10,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 5,
          }
        }
      />
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        January 1, 2023 at 12:00:00 PM
      </Text>
      <Text
        style={
          {
            "color": undefined,
            "fontSize": 14,
            "marginBottom": 2,
          }
        }
      >
        to
        January 1, 2023 at 12:05:00 PM
         (5m)
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          color="#000000"
          name="pencil"
          size={24}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginLeft": 20,
            "opacity": 1,
          }
        }
      >
        <Icon
          name="delete"
          size={24}
        />
      </View>
    </View>
  </View>
</View>
`;
